--- a/kontakt.html
+++ b/kontakt.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kontakt</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 
 <body>
@@ -35,22 +37,25 @@
       </form>
     </div>
 
-    <!-- Senden-Button außerhalb, aber visuell darunter -->
     <div class="kontakt-button-wrapper">
       <button type="submit">Senden</button>
     </div>
 
 
-    <div class="round-box" style="margin-top: 2rem;">
-      <p>
-        Aulon Gashi<br />
-        schueler123 📃<br />
-        aulon_gashi@outlook.de<br />
-        EGELI Informatik AG<br />
-        Teufener Strasse 36<br />
-        9000 St. Gallen
-      </p>
-    </div>
+    <div class="round-box kontakt-adresse" style="margin-top: 2rem;">
+  <p>
+    Aulon Gashi<br />
+    schueler123
+    <a href="https://github.com/schueler123" target="_blank" aria-label="GitHub">
+      <i class="fab fa-github" style="margin-left: 0.3rem; font-size: 1.1rem; color: black;"></i>
+    </a><br />
+    aulon_gashi@outlook.de<br />
+    EGELI Informatik AG<br />
+    Teufener Strasse 36<br />
+    9000 St. Gallen
+  </p>
+</div>
+
   </main>
 
   <footer>
